<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                tools:context=".MainActivity">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    tools:ignore="MissingConstraints">
<ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/rdxshop_logo"/>
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/signin_here"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="start"
                        android:layout_marginBottom="10dp"
                        android:text="@string/signin_here_subheading"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="0.5dp"
                        android:background="#c0c0c0" />

                    <EditText
                        android:id="@+id/et_enter_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:ems="10"
                        android:textSize="12sp"
                        android:background="#efea91"
                        android:hint="@string/enter_your_email"
                        android:inputType="textPersonName"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/et_enter_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:background="#efea91"
                        android:textSize="12sp"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:autofillHints="" />

                    <Button
                        android:id="@+id/button_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAllCaps="false"
                        android:background="@drawable/submit_button"
                        android:text="@string/sign_in"
                        android:textColor="@android:color/white"
                        />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/or_login_with_social"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical">

                        <com.shobhitpuri.custombuttons.GoogleSignInButton
                            android:id="@+id/sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:isDarkTheme="true"
                            android:text="@string/bt_google_signin"
                            android:layout_gravity="center_horizontal"/>

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/login_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginLeft="5dp"
                            />
                    </LinearLayout>
                    <Button
                        android:id="@+id/button_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAllCaps="false"
                        android:background="@drawable/submit_button"
                        android:text="@string/sign_up"
                        android:textColor="@android:color/white"
                        />
                    <Button
                        android:id="@+id/button_continue_as_guest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAllCaps="false"
                        android:background="@drawable/submit_button"
                        android:text="@string/bt_continue_as_guest"
                        android:textColor="@android:color/white"
                        />
                    <LinearLayout
                        android:id="@+id/response_message_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:visibility="gone"
                        android:background="@drawable/message_response_shape"
                        >
                        <TextView
                            android:id="@+id/response_message_two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/response_message_linear_success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="15dp"
                        android:visibility="gone"
                        android:background="@drawable/message_response_green"
                        >
                        <TextView
                            android:id="@+id/response_message_two_success"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:textColor="#ffffff"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
