<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@drawable/rdx_login_background"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/rdx_logo"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="start"
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:src="@drawable/rdxshop_logo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="#e8ffffff"
            android:layout_marginLeft="30dp"
            android:text="@string/signin_here"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:background="#e8ffffff" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/response_message_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:visibility="gone"
        android:background="@drawable/message_response_shape"
        >
        <TextView
            android:id="@+id/response_message_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#ffffff"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/email_address_section"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
           >
            <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_enter_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
                android:backgroundTint="#C5FFFFFF"
        android:ems="1"
            android:textCursorDrawable="@null"
            android:textColor="#C5FFFFFF"
            android:textColorHint="#C5FFFFFF"
        android:textSize="15sp"
        android:hint="@string/enter_your_email"
        android:inputType="textPersonName"
        android:autofillHints="" />
            <ImageView
                android:id="@+id/email_image"
                android:layout_width="20dp"
                android:layout_alignParentStart="true"
                android:layout_height="20dp"
                android:layout_alignStart="@id/et_enter_email"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/mail_icon_new" />
        </RelativeLayout>
        <RelativeLayout
        android:id="@+id/password_section"
            android:layout_width="match_parent"
            android:layout_height="50dp"
        android:layout_marginTop="8dp"
       >

            <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_enter_password"
        android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#C5FFFFFF"
        android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:paddingBottom="20dp"
            android:textCursorDrawable="@null"
            android:backgroundTint="#C5FFFFFF"
        android:ems="1"
        android:textSize="15sp"
            android:textColorHint="#c5ffffff"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:autofillHints="" />
            <ImageView
                android:id="@+id/password_image"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignStart="@id/et_enter_password"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/secure_icon_new" />
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:paddingLeft="30dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/login_icon"
        android:textStyle="bold"
        android:gravity="start|center_vertical"
        android:background="@drawable/submit_button"
        android:text="@string/sign_in"
        android:textColor="#e53935"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#e8ffffff" />
        <TextView
            android:id="@+id/social_login_or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#e8ffffff"
            android:layout_marginLeft="5dp"
            android:text="@string/or_social_login"
            />
        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#e8ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:isDarkTheme="false"
            android:text="@string/bt_google_signin"
            />

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            facebook:com_facebook_login_text="@string/bt_facebook_signin"
            android:id="@+id/login_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textSize="12sp"
            android:paddingTop="15dp"
            android:paddingBottom="11dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
        android:id="@+id/textView_guest_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
            android:clickable="true"
        android:textAllCaps="false"
        android:text="@string/bt_continue_as_guest"
        android:textColor="@android:color/white"
        />
    </LinearLayout>

</LinearLayout>
